syntax = "proto3";

package billing;
option go_package="billingpb";

message bill {
    string first_name = 1;
    string last_name = 2;
    string invoice_date = 3;
    float invoice_amt = 4;
}

message sendInvoiceRequest {
    bill biller = 1;
}

message sendInvoiceResponse {
    string result = 1;
}

service BillingService {
    rpc sendInvoice (sendInvoiceRequest) returns (sendInvoiceResponse) {};
}
